Drop recovery_install service

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -654,6 +654,6 @@ on property:ro.debuggable=1
     chmod 0773 /data/misc/trace
     start console
 
-service flash_recovery /system/bin/install-recovery.sh
-    class main
-    oneshot
+#service flash_recovery /system/bin/install-recovery.sh
+#    class main
+#    oneshot
