--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -640,7 +640,7 @@ on property:ro.debuggable=1
     chmod 0773 /data/misc/trace
     start console
 
-service flash_recovery /system/bin/install-recovery.sh
-    class main
-    oneshot
-    disabled
+#service flash_recovery /system/bin/install-recovery.sh
+#    class main
+#    oneshot
+#    disabled
