Apply seSuperuser patch

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -661,3 +661,8 @@ on property:ro.debuggable=1
 #service flash_recovery /system/bin/install-recovery.sh
 #    class main
 #    oneshot
+
+service daemonsu /sbin/su --daemon
+    class main
+    user root
+    seclabel u:r:su:s0
